# Stock_broker

./: README.md
stock_broker/: README.md  pyproject.toml  test.py
stock_broker/src/stock_broker/: crew.py  main.py
stock_broker/src/stock_broker/config/: agents.yaml  tasks.yaml
stock_broker/src/stock_broker/tools/: market_data_tool.py  multi_timeframe_tool.py  news_sentiment_tool.py  pattern_recognition_tool.py  risk_management_tool.py  technical_analysis_tool.py
stock_broker/src/stock_broker/utils/: data_processor.py  validators.py
